# stonks

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  check_data_span.py  config.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  readme.txt  requirements.tst  requirements.txt  setup.py  setup_project.py  stonks-dash.service  tickers.example.yaml  tickers.yaml
dev/: add_dry_run_support.sh  add_find_aliases.sh  check_data_span.py  enforce_find_naming.sh  fix_all_find_function_imports.sh  fix_double_alias.sh  fix_function_names.sh  fix_pattern_imports.sh  fix_triangle_alias.sh  replace_stonkslib.sh  restructure.py  restructurev2.py  restructurev3.py  sanity_check.sh  setup.py  setup_project.py  standardize_find_names.sh  test_anal.py  test_clean_columns.py  test_doubles.py  test_engine.py  test_head_shoulders.py  test_load_td.py  test_news_sentiment.py  test_triangles.py  test_wedges.py  update_stonkslib.py
docker/: crontab
docs/: snapshot-schema.md  stonks-advisor-handoff.md
project/: check_data_span.py  fetch_data.py  stonks.py  stonks_cli.py  tickers.yaml  utils.py
project/alerts/: trade_alerts.py
project/data_collection/: fetch_data.py
project/indicators/: bollinger.py  macd.py  obv.py  rsi.py
project/patterns/: doubles.py  head_shoulders.py  historical_pattern_analysis.py  pattern_score.py  triangles.py  wedges.py
scripts/: daily_alert.sh  daily_pipeline.sh  nightly_optimize.sh  nightly_pipeline.sh  refresh_earnings.sh
stonkslib/: fetch_data.py  owui_tool.py  snapshot.py  stonks.py  stonks_cli.py
stonkslib/agents/: analyst.py  base.py  orchestrator.py
stonkslib/alerts/: signals.py  trade_alerts.py
stonkslib/analysis/: build_db.py  signals.py  trade_alerts.py
stonkslib/backtest/: doubles.py  head_shoulders.py  indicators.py  leaps.py  strategy.py  triangles.py  wedges.py
stonkslib/bot/: discord_bot.py
stonkslib/broker/: alpaca.py  robinhood.py  snaptrade.py
stonkslib/clean/: od.py  td.py
stonkslib/cli/: agents.py  alert.py  analyze.py  backtest.py  bot.py  clean.py  dash.py  earnings_refresh.py  export.py  fetch.py  leaps.py  leaps_backtest.py  leaps_trades.py  main.py  (+8 more)
(+128 files in other folders)
