[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonks"
version = "0.1.1"
description = "CLI tool for stock pattern detection"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["stocks", "trading", "chart patterns", "cli"]
dependencies = [
    "click",
    "pandas",
    "yfinance",
    "scikit-learn",
    "pyyaml"
]

[project.scripts]
stonks = "stonkslib.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["stonkslib*"]
