[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonks"
version = "0.1.1"
description = "Local-first quantitative trading toolkit"
authors = [{ name = "stanrey1011", email = "tech@stanrey.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["stocks", "trading", "options", "leaps", "cli"]
dependencies = [
    "click",
    "pandas",
    "numpy",
    "yfinance",
    "pyyaml",
    "plotly",
    "pyarrow",
    "pydantic",
    "requests",
    "scipy",
    "streamlit",
    "alpaca-py",
    "python-dotenv",
]

[project.scripts]
stonks = "stonkslib.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["stonkslib*"]
